--- a/index.html
+++ b/index.html
@@ -5,13 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-  <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+  
 
   <title>Boostrap Starter Page</title>
   <!-- Fonts -->
@@ -22,7 +16,7 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 
-<body>
+<body id="view">
   <header>
     <nav id="header-nav" class="navbar navbar-default navbar-fixed-top">
       <div class="container-fluid">
